Fix for bug #29079: Semantics of "bigint" depend on platform specifics (size, signedness of char ?)

Problem: long and long long types mess in a comparison may lead to wrong results on some platforms.
Fix: prefer [unsigned] long long as [u]longlong as it's used unconditionally in many places.